<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/MainAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/MainAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9" >

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_launcher_foreground"
                android:foregroundGravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/NoInternetConnectionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainAppBarLayout"
        app:layout_constraintBottom_toTopOf="@id/MainRecyclerView"
        android:text="@string/noInternetConnection"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/UpdatingFeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/updatingFeed"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="gone"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainAppBarLayout" />

    <ProgressBar
        android:id="@+id/MainProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpdatingFeedTextView" />

    <ImageView
        android:id="@+id/ErrorImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/error_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainAppBarLayout"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/ErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="gone"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ErrorImageView"
        android:text="@string/errorText"/>

    <Button
        android:id="@+id/RefreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ErrorText"
        android:visibility="gone"/>

    <com.example.sportogram.RecyclerViewClasses.VideoPlayerRecyclerView
        android:id="@+id/MainRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoInternetConnectionTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>