<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/PostAuthor"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="serif"
                android:text="Nickname"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/PostFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center">

                <ImageView
                    android:id="@+id/PostThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@color/white" />

                <ImageView
                    android:id="@+id/PostVolumeControl"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end|top"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0"
                    android:animateLayoutChanges="true" />

                <ProgressBar
                    android:id="@+id/PostProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PostCreatedBeforeHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="serif"
                    android:text="@string/createdBefore"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PostCreatedBefore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="1 year ago" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PostViewsHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="serif"
                    android:text="@string/views"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PostViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="Ivan Rakitić, Neymar Jr. + 46.8k others" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PostDescriptionHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="serif"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PostDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:text="Winning goal against Russia securing Semi-finals in WorldCup Russia 2018.🇭🇷🇷🇺" />

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>